--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -13,8 +13,6 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/favicon.png" />
 
     <!-- add to homescreen for ios -->
@@ -25,6 +23,7 @@
 
   <body>
     <div id="root"></div>
-  </body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmAwkv8-x2I--ne-NtA3C_4E_-xLCsFJs" async defer></script>
+  </body>  
 
 </html>
